--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,8 +3,8 @@ name: Continuous Integration
 on:
     pull_request:
     push:
-      branches:
-        - "main"
+      # branches:
+      #   - "main"
 
 env:
     PYTEST_ADDOPTS: "--color=yes"
